<resources>
    <string name="app_name">Aryan_Atel</string>
    <string name="ready">Ready</string>
    <string name="skip">Skip</string>
    <string name="illustration">illustration</string>
    <string name="upload_images">Upload Images</string>
    <string name="or">OR</string>
    <string name="feeds">Feeds</string>
    <string name="select_images">Select Images</string>
    <string name="next">Next</string>
</resources>